# 2026-RM-MechaCore

./: .gitignore  README.md
FreeRTOS_Infantry_C_Board_Chassis_CPP-main/: .eide.usr.ctx.json  FreeRTOS_Infantry_C_Board_Chassis_CPP.ioc
FreeRTOS_Infantry_C_Board_Chassis_CPP-main/.eide/: eide.json  files.options.yml
FreeRTOS_Infantry_C_Board_Chassis_CPP-main/APP/: Buzzer.cpp  Buzzer.hpp  LED.cpp  LED.hpp
FreeRTOS_Infantry_C_Board_Chassis_CPP-main/MDK-ARM/: FreeRTOS_Infantry_C_Board_Chassis_CPP.uvprojx  startup_stm32f407xx.lst
FreeRTOS_Infantry_C_Board_Chassis_CPP-main/User/: call_back.cpp  call_back.hpp  capacity.cpp  capacity.hpp  communication.cpp  communication.hpp  config.hpp  dji_motor.cpp  dji_motor.hpp  error_handle.cpp  init.cpp  pid.cpp  pid.hpp  power_limit.cpp  power_limit.hpp  variables.cpp  variables.hpp
FreeRTOS_Infantry_C_Board_Chassis_CPP-main/Utils/: Matrix.hpp  RLS.hpp
MatLab/PullingForce/: Uphill.m  car.slx
OmnidirectionalChassis_C_board_2026/: OmnidirectionalChassis_C_board_2026.ioc
OmnidirectionalChassis_C_board_2026/MDK-ARM/: OmnidirectionalChassis_C_board_2026.uvguix.WHC  OmnidirectionalChassis_C_board_2026.uvoptx  OmnidirectionalChassis_C_board_2026.uvprojx
OmnidirectionalGimbal_A_board_2026/: OmnidirectionalGimbal_A_board_2026.ioc
OmnidirectionalGimbal_A_board_2026/MDK-ARM/: OmnidirectionalGimbal_A_board_2026.uvguix.WHC  OmnidirectionalGimbal_A_board_2026.uvoptx  OmnidirectionalGimbal_A_board_2026.uvprojx  startup_stm32f427xx.lst
RCIA_FreeRTOS_Infantry_A_Board_CPP-main/: .mxproject  FreeRTOS_Infantry_A_Board_CPP.ioc
RCIA_FreeRTOS_Infantry_A_Board_CPP-main/Heat_Detector/: DWT.cpp  DWT.hpp  Heat_Detector.cpp  Heat_Detector.hpp  ShootTask.cpp  ShootTask.hpp  SlidingWindow.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/: .clangd  .gitignore  .mxproject  2026StringWheelChassis_C_board.ioc  CMakeLists.txt  compile.ps1  compile_commands.json  download.jlink  download.ps1
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/Core/Inc/: stm32f4xx_it.h
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/Core/Src/: can.c  freertos.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/MDK-ARM/: 2026StringWheelChassis_C_board.uvguix.WHC  2026StringWheelChassis_C_board.uvoptx  2026StringWheelChassis_C_board.uvprojx  JLinkLog.txt  startup_stm32f407xx.S
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/MDK-ARM/.eide/: eide.yml  env.ini  files.options.yml
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/MDK-ARM/2026StringWheelChassis_C_board/: 2026StringWheelChassis_C_board.axf  2026StringWheelChassis_C_board.build_log.htm  2026StringWheelChassis_C_board.hex  2026StringWheelChassis_C_board.htm  2026StringWheelChassis_C_board.lnp  2026StringWheelChassis_C_board.map  2026StringWheelChassis_C_board_2026StringWheelChassis_C_board.dep  assert.d  asster.d  buzzer_manager.d  buzzer_manager_1.d  calculationbase.d  callback.d  can.d  can_bus.d  can_bus_1.d  can_bus_impl.d  can_bus_impl_1.d  can_device.d  can_device_1.d  can_device_impl.d  can_device_impl_1.d  can_hal.d  cmsis_os.d  communicationtask.d  communicationtask_1.d  controltask.d  controltask_1.d  croutine.d  djimotor.d  dma.d  dt7.d  dt7_1.d  dwt.d  dwt_1.d  event_groups.d  feedforward.d  feedforward_1.d  filter.d  filter_1.d  (+71 more)
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/MDK-ARM/RTE/_2026StringWheelChassis_C_board/: RTE_Components.h
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/Task/: Callback.cpp  CommunicationTask.cpp  CommunicationTask.hpp  ControlTask.cpp  ControlTask.hpp  MotorTask.cpp  MotorTask.hpp  SerialTask.cpp  SerialTask.hpp  UITask.cpp  UITask.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/APP/Referee/: RM_RefereeSystem.cpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/Alg/ADRC/: adrc.cpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/Alg/ChassisCalculation/: StringWheel.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/Alg/PID/: README.md
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/Alg/PowerControl/: PowerControl.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/Alg/PowerControl-TestVersion/PythonProject/PythonScript/Efficiency method/: 8th-order_fitting.py  extract_red_curve.py
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/Alg/UtilityFunction/: SlopPlanning.cpp  SlopePlanning.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/Common/CANTransport/: CANTransport.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/Common/FiniteStateMachine/: FiniteStateMachine_chassis.cpp  FiniteStateMachine_chassis.hpp  FiniteStateMachine_launch.cpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/Motor/: MotorBase.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/Motor/DM/: DmMotor.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/Motor/Dji/: DjiMotor.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/Motor/LK/: Lk_motor.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/RemoteControl/: DT7.cpp  DT7.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/BSP/SimpleKey/: SimpleKey_README.md
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/HAL/UART/impl/: uart_device_impl.cpp  uart_device_impl.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/User/core/HAL/UART/interface/: uart_device.hpp
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/cmake/: gcc-arm-none-eabi.cmake
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/cmake/stm32cubemx/: CMakeLists.txt
Robot/InfantryOmni-No2/2026StringWheelChassis_C_board/tools/: ui_preview.html
Robot/InfantryOmni-No2/2026StringWheelGimbal_C_board/cmake/stm32cubemx/: CMakeLists.txt
common/: .mxproject  CMakeLists.txt  common.ioc  debug.jdebug  run.sh
core/: README.md
core/APP/: README.md  (+4 more)
(+1437 files in other folders)
